# TokenForge-GPU-Accelerated-LLM-Inference-Research-Platform

./: .gitignore  README.md  inference_lab.db  pyproject.toml  requirements.txt  setup_env.py
batching/: __init__.py  saturation_finder.py  static_batcher.py  sweep.py
benchmark_engine/: __init__.py  inference_bench.py  pipeline_profiler.py  report_generator.py  runner.py  tokenizer_bench.py
continuous_batching/: __init__.py  benchmark.py  engine.py  request_queue.py  scheduler.py
core/: __init__.py  config.py  database.py  gpu_monitor.py  metrics.py  models.py
cuda_kernels/: __init__.py  benchmark.py  flash_attention.py  layernorm.py  matmul.py  softmax.py  vector_add.py
dashboard/: app.py
dashboard/templates/: generated-page (2).html  index.html
kv_cache/: __init__.py  benchmark.py  cache_manager.py  memory_analysis.py
prefix_caching/: __init__.py  benchmark.py  cache_engine.py  trie_cache.py
profiling/: __init__.py  kernel_analysis.py  layer_breakdown.py  roofline.py  torch_profiler.py
quantization/: __init__.py  comparator.py  fp16_runner.py  int4_runner.py  int8_runner.py  quality_check.py
reports/: architecture.md  continuous_batching.md  kv_cache_explained.md  quantization_theory.md  roofline_analysis.md  speculative_decoding.md
speculative_decoding/: __init__.py  benchmark.py  decoder.py  draft_model.py  verifier.py
tokenforge/: __init__.py  analyze.py  benchmark.py  cli.py  environment.py  model.py  model_registry.py
tokenforge/cache/: __init__.py  adaptive_eviction.py  compressed.py  hierarchical.py
tokenforge/distributed/: __init__.py  expert_parallel.py  pipeline_parallel.py  tensor_parallel.py
tokenforge/plugins/: __init__.py  base.py  registry.py
tokenforge/profiling/: interactive.py
tokenforge/schedulers/: __init__.py  base.py  deadline_aware.py  fifo.py  priority.py  round_robin.py  shortest_remaining.py  token_fair.py
triton_kernels/: __init__.py  benchmark.py  fused_attention.py  layernorm.py  matmul.py  softmax.py  vector_add.py
(+10 files in other folders)
